logs/ctypes-configure2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ctypes_configure'...
Compiling './lib/python3.5/site-packages/ctypes_configure/cbuild.py'...
***   File "./lib/python3.5/site-packages/ctypes_configure/cbuild.py", line 232
    if debug: print "modname", modname
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ctypes_configure/configure.py'...
***   File "./lib/python3.5/site-packages/ctypes_configure/configure.py", line 615
    print key, value
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ctypes_configure/dumpcache.py'...
***   File "./lib/python3.5/site-packages/ctypes_configure/dumpcache.py", line 36
    print 'Wrote %s.' % (filename,)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ctypes_configure/stdoutcapture.py'...
***   File "./lib/python3.5/site-packages/ctypes_configure/stdoutcapture.py", line 76
    print 'Output:', repr(fout.read())
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ctypes_configure/test'...
Compiling './lib/python3.5/site-packages/ctypes_configure/test/test_configure.py'...
***   File "./lib/python3.5/site-packages/ctypes_configure/test/test_configure.py", line 210
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ctypes_configure2-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
